--- a/wp-content/themes/stacylauren/sass/forms/_fields.scss
+++ b/wp-content/themes/stacylauren/sass/forms/_fields.scss
@@ -96,3 +96,45 @@ textarea#comment {
     justify-content: center;
     margin-bottom: 1em;
 }
+
+/*div.wpcf7-mail-sent-ok {
+    border: none;
+    text-align: center;
+    font-size: 2em;
+    color: $green;
+    margin-top: 0;
+}
+
+div.wpcf7-validation-errors, div.wpcf7-acceptance-missing {
+    border: none;
+    text-align: center;
+    font-size: 2em;
+    color: red;
+    margin-top: 0;	
+}*/
+
+.wpcf7-form .wpcf7-response-output.wpcf7-validation-errors {
+	color: black;
+    background-color: #FFBABA;
+    border: 0;
+    padding: 10px;
+    text-align: center;
+}
+.wpcf7-form .wpcf7-response-output.wpcf7-mail-sent-ok {
+	color: black;
+    background-color: $lime-green;
+    border: 0;
+    padding: 10px;
+    text-align: center;
+}
+div.wpcf7-mail-sent-ok:before,div.wpcf7-validation-errors:before {
+    font: 26px/30px FontAwesome;
+    margin-right: 16px;
+    vertical-align: middle;
+}
+div.wpcf7-mail-sent-ok:before {
+    content: "\f058";
+}
+div.wpcf7-validation-errors:before {
+    content: "\f057";
+}
