added style for image captions

--- a/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
+++ b/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
@@ -582,9 +582,11 @@ a.post-edit-link{
   }
 }
 
-.featured-image-caption {
+.featured-image-caption, .wp-caption-text {
   font-size: .8em;
   font-style: italic;
   color: $medgray;
   margin-bottom: 1em;
 }
+
+
